# SSPSG-Discord-Bot

./: .env.example  .gitignore  Cargo.toml  README.md  cargo.toml  readme.md
Kod/: Bot.rs
Kód/: Bot.rs
kod/: bot.rs
kod/prikaz/: mod.rs  prikaz.rs
src/: main.rs
